# tp_hw_c_cpp_2021_2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: header.h  multi_thread.h  one_thread.h
source/: multi_thread.c  one_thread.c
src/: functhions.c  functions.c  main.c
test/: gtest.cpp
tests/: gtest_multi_thread.cpp  gtest_one_thread.cpp  gtest_stress_test.cpp
tests/generator/: generator.py
tests/include/: stress_tests.h
tests/source/: comparator.cpp  stress_test_multi_thread.cpp  stress_test_one_thread.cpp
